feat: adds list_all flag to list organizations including soft deleteds

--- a/config.env.sample
+++ b/config.env.sample
@@ -74,6 +74,7 @@ OSPM_COCKROACHDB_SSL_CLIENT_CERT_PATH="/etc/roachCerts/client.crt"
 # Leave blank or comment out the line to use the defatul value (Default: /etc/roachCerts/ca.crt)
 OSPM_COCKROACHDB_SSL_CA_CERT_PATH="/etc/roachCerts/ca.crt"
 
+
 #########################
 #   Request's Policies  #
 #########################
@@ -88,7 +89,6 @@ OSPM_COCKROACHDB_SSL_CA_CERT_PATH="/etc/roachCerts/ca.crt"
 # Leave blank or comment out the line to use the defatul value (Default: 0.0.0.0/0)
 ORGANIZATION_SOFT_DELETE_CLIENT_WHITELIST_IP="0.0.0.0/0"
 
-
 # This field determines the permited IPs of the clients that are allowed
 # to call the organization hard delete.
 # Any Spaces will be removed!
@@ -99,3 +99,14 @@ ORGANIZATION_SOFT_DELETE_CLIENT_WHITELIST_IP="0.0.0.0/0"
 #   - 192.168.1.12,192.168.1.0/24
 # Leave blank or comment out the line to use the defatul value (Default: 0.0.0.0/0)
 ORGANIZATION_HARD_DELETE_CLIENT_WHITELIST_IP="0.0.0.0/0"
+
+# This field determines the permited IPs of the clients that are allowed
+# get the list of organizanizations including the soft deleteds
+# Any Spaces will be removed!
+# Absolute IPs and IP ranges are can be used in this parameter including comma ',' as separator
+# Examples: 
+#   - 127.0.0.1/32
+#   - 192.168.1.50/32,172.16.17.0/24
+#   - 192.168.1.12,192.168.1.0/24
+# Leave blank or comment out the line to use the defatul value (Default: 0.0.0.0/0)
+ORGANIZATION_LIST_ALL_CLIENT_WHITELIST_IP="172.16.1.3/32"
