--- a/config.env
+++ b/config.env
@@ -109,4 +109,4 @@ ORGANIZATION_HARD_DELETE_CLIENT_WHITELIST_IP="0.0.0.0/0"
 #   - 192.168.1.50/32,172.16.17.0/24
 #   - 192.168.1.12,192.168.1.0/24
 # Leave blank or comment out the line to use the defatul value (Default: 0.0.0.0/0)
-ORGANIZATION_LIST_ALL_CLIENT_WHITELIST_IP="172.16.1.3/32, 0.0.0.0"
+ORGANIZATION_LIST_ALL_CLIENT_WHITELIST_IP="0.0.0.0/0"
