feat: adds DB connection settings
  - adds max connection count to the database
  - adds max connection duration to the database
  - adds max idle connection count to the database
  - adds max idle connection time out to the database

--- a/config.env.sample
+++ b/config.env.sample
@@ -74,6 +74,23 @@ OSPM_COCKROACHDB_SSL_CLIENT_CERT_PATH="/etc/roachCerts/client.crt"
 # Leave blank or comment out the line to use the defatul value (Default: /etc/roachCerts/ca.crt)
 OSPM_COCKROACHDB_SSL_CA_CERT_PATH="/etc/roachCerts/ca.crt"
 
+# This field determines the maximum number of idle connections of cockroach db
+# Leave blank or comment out the line to use the defatul value (Default: 20)
+OSPM_COCKROACHDB_MAX_IDLE_CONNECTIONS=20
+
+# This field determines the maximum life time of idle connections of cockroach db in seconds
+# Leave blank or comment out the line to use the defatul value (Default: 1800)
+OSPM_COCKROACHDB_MAX_IDLE_CONNECTIONS_LIFE_TIME=1800
+
+# This field determines the maximum number of open connections to cockroach db
+# Leave blank or comment out the line to use the defatul value (Default: 100)
+OSPM_COCKROACHDB_MAX_OPEN_CONNECTIONS=100
+
+# This field determines the maximum life time of connections to cockroach db in seconds
+# Leave blank or comment out the line to use the defatul value (Default: 1800)
+OSPM_COCKROACHDB_MAX_CONNECTION_LIFE_TIME=1800
+
+
 
 #########################
 #   Request's Policies  #
